--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,10 +5,12 @@ opencv-python==4.9.0.80
 numpy==1.26.4
 Pillow>=10.0.0
 yt-dlp>=2023.0.0
-openai-whisper==20231117
-torch==2.2.0
-transformers==4.37.2
-scenedetect==0.6.3
-moviepy==1.0.3
+openai-whisper==20240930
+torch==2.7.1
+torchvision==0.22.1
+transformers==4.52.4
+scenedetect==0.6.6
+moviepy==2.2.1
 python-dotenv==1.0.1
-requests>=2.25.0 
+requests>=2.25.0
+huggingface-hub>=0.30.0 
